[gd_scene load_steps=3 format=3 uid="uid://victory_screen"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1_victory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.05, 0.05, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_victory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.02, 0.02, 1)

[node name="Fireworks" type="Node2D" parent="."]

[node name="Firework1" type="ColorRect" parent="Fireworks"]
position = Vector2(200, 100)
size = Vector2(4, 4)
color = Color(1, 0.5, 0, 1)

[node name="Firework2" type="ColorRect" parent="Fireworks"]
position = Vector2(400, 80)
size = Vector2(3, 3)
color = Color(0, 1, 0.5, 1)

[node name="Firework3" type="ColorRect" parent="Fireworks"]
position = Vector2(600, 120)
size = Vector2(5, 5)
color = Color(0.5, 0, 1, 1)

[node name="Firework4" type="ColorRect" parent="Fireworks"]
position = Vector2(800, 90)
size = Vector2(4, 4)
color = Color(1, 0, 0.5, 1)

[node name="Firework5" type="ColorRect" parent="Fireworks"]
position = Vector2(1000, 110)
size = Vector2(3, 3)
color = Color(0.5, 1, 0, 1)

[node name="Firework6" type="ColorRect" parent="Fireworks"]
position = Vector2(300, 200)
size = Vector2(4, 4)
color = Color(1, 1, 0, 1)

[node name="Firework7" type="ColorRect" parent="Fireworks"]
position = Vector2(500, 180)
size = Vector2(3, 3)
color = Color(0, 0.5, 1, 1)

[node name="Firework8" type="ColorRect" parent="Fireworks"]
position = Vector2(700, 220)
size = Vector2(5, 5)
color = Color(1, 0.5, 0.5, 1)

[node name="Firework9" type="ColorRect" parent="Fireworks"]
position = Vector2(900, 160)
size = Vector2(4, 4)
color = Color(0.5, 0.5, 1, 1)

[node name="Firework10" type="ColorRect" parent="Fireworks"]
position = Vector2(1100, 200)
size = Vector2(3, 3)
color = Color(1, 0, 0, 1)

[node name="Firework11" type="ColorRect" parent="Fireworks"]
position = Vector2(150, 300)
size = Vector2(4, 4)
color = Color(0, 1, 0, 1)

[node name="Firework12" type="ColorRect" parent="Fireworks"]
position = Vector2(350, 280)
size = Vector2(3, 3)
color = Color(1, 0, 1, 1)

[node name="Firework13" type="ColorRect" parent="Fireworks"]
position = Vector2(550, 320)
size = Vector2(5, 5)
color = Color(0, 1, 1, 1)

[node name="Firework14" type="ColorRect" parent="Fireworks"]
position = Vector2(750, 260)
size = Vector2(4, 4)
color = Color(1, 1, 0.5, 1)

[node name="Firework15" type="ColorRect" parent="Fireworks"]
position = Vector2(950, 300)
size = Vector2(3, 3)
color = Color(0.5, 0, 0.5, 1)

[node name="Firework16" type="ColorRect" parent="Fireworks"]
position = Vector2(1150, 280)
size = Vector2(4, 4)
color = Color(1, 0.5, 1, 1)

[node name="VictoryCharacter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.2, 0.6, 0.8, 1)

[node name="VictoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VictoryTitle" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
text = "DEATH TO VEGANS"
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="CongratulationsText" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 90.0
offset_right = 300.0
offset_bottom = 130.0
text = "Congratulations! You have rid the world of evil fruits and veggies."
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_2")

[node name="VictoryMessage" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 150.0
offset_right = 250.0
offset_bottom = 200.0
text = "Bella has successfully completed her mission and saved humanity from the fruit zombie apocalypse!"
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_3")

[node name="ButtonContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0

[node name="MainMenuButton" type="Button" parent="VictoryPanel/ButtonContainer"]
layout_mode = 2
text = "MAIN MENU"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="QuitButton" type="Button" parent="VictoryPanel/ButtonContainer"]
layout_mode = 2
text = "QUIT"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="LabelSettings_1" type="LabelSettings" parent="."]
font_size = 48
font_color = Color(0.8, 0.6, 0.1, 1)
outline_size = 3
outline_color = Color(0.4, 0.3, 0.05, 1)

[node name="LabelSettings_2" type="LabelSettings" parent="."]
font_size = 24
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 2
outline_color = Color(0.2, 0.2, 0.2, 1)

[node name="LabelSettings_3" type="LabelSettings" parent="."]
font_size = 18
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 1
outline_color = Color(0.2, 0.2, 0.2, 1) 